# guts

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
guts/: Cargo.toml
guts/src/: action.rs  app.rs  config.rs  data.rs  detect.rs  error.rs  errors.rs  export.rs  fuzzy.rs  history.rs  keybinding.rs  logging.rs  main.rs  theme.rs  ui.rs
presets/: aurora_mist.toml  catppuccin.toml  deepsea.toml  forest_canopy.toml  gruvbox.toml  monochrome.toml  navy.toml  nord.toml  sunset_terracotta.toml
