[package]
name = "guts"
version = "1.0.0"
edition = "2024"

[dependencies]
arboard = "3.4"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
crossterm = "0.27"
mongodb = { version = "2.8", default-features = false, features = ["sync"] }
mysql = { version = "26", default-features = false, features = ["rustls-tls"] }
once_cell = "1.19"
opener = "0.7"
postgres = "0.19"
ratatui = "0.26"
regex = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
